# irnas-usersettings-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  east.yml  makefile  west.yml
.github/workflows/: build.yaml  codechecker.yaml  twister.yaml
samples/basic/: CMakeLists.txt  README.md
samples/basic/src/: main.c
samples/binary_encoding/: CMakeLists.txt  README.md  prj.conf
samples/binary_encoding/src/: main.c
samples/bluetooth_service/: CMakeLists.txt  README.md  prj.conf
samples/bluetooth_service/src/: main.c
samples/callbacks/: CMakeLists.txt  README.md
samples/callbacks/src/: main.c
samples/internal/binary_encoding/: CMakeLists.txt
samples/internal/binary_encoding/src/: main.c
tests/common/: Kconfig
tests/common/fancy_ztest/: tc_util_user_override.h
tests/protocol_binary/: CMakeLists.txt  prj.conf  testcase.yaml
tests/protocol_binary/src/: main.c
tests/user_settings/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/user_settings/src/: main.c
tests/user_settings_json/: CMakeLists.txt  prj.conf  testcase.yaml
tests/user_settings_json/src/: main.c
tests/user_settings_list/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/user_settings_list/src/: main.c
user-settings/: CMakeLists.txt  Kconfig  user_settings.c  user_settings_list.c  user_settings_list.h  user_settings_shell.c
user-settings/include/: user_settings.h  user_settings_types.h
